<resources>
    <string name="app_name">jetpack-submission1</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="movie">Movie</string>
    <string name="dummy_title">Dummy Title</string>
    <string name="title_tv_show">TV Show</string>
    <string name="title_movie">Movie</string>
    <string name="dummy_overview">During the 1980s, a failed stand-up comedian is driven insane and turns to a life of crime and chaos in Gotham City while becoming an infamous psychopathic crime figure.</string>
    <string name="what_s_trending">What\'s Trending</string>
    <string name="dummy_rating">8.3</string>
    <string name="overview">Overview</string>
    <string name="episode">Episode</string>
    <string name="dummy_number">8</string>
    <string name="seasons">Seasons</string>
    <string name="favorite">Favorite</string>
    <string name="coming_soon">Coming Soon</string>
    <string name="discover_sub_movie">Let\'s find your favorite movie</string>
    <string name="discover">Discover</string>
    <string name="trending_sub_movie">Take a look what people see</string>
    <string name="trending_sub_tv">Take a look people see</string>
    <string name="discover_sub_tv">Let\'s find your favorite TV Series</string>
    <string name="tv"> TV</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_favorite">Favorite</string>
</resources>