<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <androidx.cardview.widget.CardView
        android:layout_width="200dp"
        android:layout_height="300dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="34dp"
        android:backgroundTint="@color/primaryLightColor"
        app:cardCornerRadius="30dp" />

    <View
        style="@style/TextContent"
        android:layout_width="200dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="24dp"
        android:background="@color/primaryLightColor"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/dummy_title"
        android:textAlignment="center"
        android:textSize="30sp" />

    <View
        style="@style/TextContent"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:background="@color/primaryLightColor"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/dummy_rating"
        android:textColor="@color/secondaryLightColor"
        android:textSize="30sp" />

    <RatingBar
        style="@style/Widget.AppCompat.RatingBar.Indicator"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_margin="4dp"
        android:numStars="5"
        android:rating="4.7"
        android:theme="@style/RatingBar" />

    <View
        style="@style/TextContent"
        android:layout_width="50dp"
        android:layout_height="20dp"
        android:layout_marginStart="24dp"
        android:background="@color/primaryLightColor"
        android:fontFamily="@font/roboto_bold"
        android:text="@string/overview"
        android:textSize="18sp" />

    <View
        android:layout_width="350dp"
        android:layout_height="50dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="24dp"
        android:background="@color/primaryLightColor"
        android:text="@string/dummy_overview"
        android:textColor="@color/primaryTextColor" />

</LinearLayout>